test/core/errors/builtin_types_error/zs/bitfield_without_arg_error.zs
package bitfield_without_arg_error;

struct WrongBitfield
{
    bit wrong;
};
